--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "start": "node ./bin/index.js",
     "dev": "ts-node ./src/index.ts"
   },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^22.9.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
-  },
-  "dependencies": {}
+  }
 }
