--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "@types/node": "^22.9.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "volta": {
+    "node": "20.10.0",
+    "yarn": "1.22.22"
   }
 }
