--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "endOfLine": "auto",
   "printWidth": 100,
   "semi": true,
-  "singleQuote": false,
+  "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "es5",
   "useTabs": false,
